--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "axios-retry": "^3.8.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.8.2",
     "jest": "^29.7.0",
+    "nock": "^13.3.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2",
-    "nock": "^13.3.3"
+    "typescript": "^5.2.2"
   },
   "repository": {
     "type": "git",
